Updated Reactive UI. Replaced queue and finished items list handling with DynamicData implementation, with batched updates.

--- a/VidCoder/View/EncodeDetailsWindow.xaml
+++ b/VidCoder/View/EncodeDetailsWindow.xaml
@@ -127,7 +127,7 @@
 					               Converter={StaticResource DoubleDisplayConverter}}" />
 			</Grid>
 
-			<ItemsControl ItemsSource="{Binding ProcessingService.EncodingJobList}">
+			<ItemsControl ItemsSource="{Binding ProcessingService.EncodingJobListBindable}">
 				<ItemsControl.ItemTemplate>
 					<DataTemplate DataType="viewModel:EncodeJobViewModel">
 						<Grid Margin="0 10 0 0">
