--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1790,7 +1790,7 @@
 									VidCoderDragDrop:DragDropHelper.IsDropTarget="True"
 									BorderBrush="#F5F5F5"
 									BorderThickness="0"
-									ItemsSource="{Binding ProcessingService.EncodeQueue}">
+									ItemsSource="{Binding ProcessingService.EncodeQueueBindable}">
 									<ListView.ItemContainerStyle>
 										<Style TargetType="ListViewItem">
 											<Setter Property="IsSelected" Value="{Binding Mode=TwoWay, Path=IsSelected}" />
@@ -1881,7 +1881,7 @@
 									BorderBrush="#F5F5F5"
 									BorderThickness="0"
 									ItemContainerStyle="{StaticResource CompletedItemStyle}"
-									ItemsSource="{Binding ProcessingService.CompletedJobs}">
+									ItemsSource="{Binding ProcessingService.CompletedJobsBindable}">
 									<ListView.View>
 										<GridView x:Name="completedGridView">
 											<GridView.Columns>
