Removed the tab header hack for fluent ribbon. Picked up some keyboard navigation bug fixes with new version of library.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -429,8 +429,8 @@
 			<!--  Ribbon  -->
 			<fluent:Ribbon
 				Grid.Row="0"
-				Margin="0 -23 0 0"
 				CanMinimize="False"
+				AreTabHeadersVisible="False"
 				IsQuickAccessToolBarVisible="False"
 				IsToolBarVisible="False">
 				<fluent:RibbonTabItem Header="Generic tab header">
