--- a/VidCoder/Themes/Light.xaml
+++ b/VidCoder/Themes/Light.xaml
@@ -3,7 +3,10 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:local="clr-namespace:VidCoder.Themes">
 	<SolidColorBrush x:Key="AlternateBackgroundBrush" Color="#F5F5F5" />
+	<SolidColorBrush x:Key="ToolBarBackgroundBrush" Color="#CCC" />
 	<SolidColorBrush x:Key="ControlTextBrush" Color="{x:Static SystemColors.ControlTextColor}" />
+	<SolidColorBrush x:Key="WindowBrush" Color="White" />
+	<SolidColorBrush x:Key="WindowTextBrush" Color="Black" />
 	<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#B8E0F3" />
 	<SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
 </ResourceDictionary>
