--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -12,9 +12,10 @@
 	Height="514"
 	MinWidth="405"
 	MinHeight="200"
+	Closing="PreviewWindow_OnClosing"
 	ShowInTaskbar="False"
 	TextOptions.TextFormattingMode="Display"
-	WindowStyle="ToolWindow" Closing="PreviewWindow_OnClosing">
+	WindowStyle="ToolWindow">
 	<Window.InputBindings>
 		<KeyBinding
 			Key="Q"
@@ -53,7 +54,11 @@
 			MouseDown="OnVideoClick"
 			Visibility="{Binding PlayingPreview,
 			                     Converter={StaticResource VisibilityConverter}}" />
-		<Grid Name="previewControls" Grid.Row="1">
+		<Grid
+			Name="previewControls"
+			Grid.Row="1"
+			Visibility="{Binding PreviewImageService.HasPreview,
+			                     Converter={StaticResource VisibilityConverter}}">
 			<preview:PreviewCreationControls />
 		</Grid>
 	</Grid>
