--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1662,7 +1662,7 @@
 				Height="4"
 				HorizontalAlignment="Stretch"
 				VerticalAlignment="Center"
-				Background="{StaticResource SplitterBrush}"
+				Background="{DynamicResource SplitterBrush}"
 				Canvas.ZIndex="4"
 				ShowsPreview="True" />
 
