--- a/VidCoder/View/Panels/ContainerPanel.xaml
+++ b/VidCoder/View/Panels/ContainerPanel.xaml
@@ -14,6 +14,9 @@
 		<Style x:Key="ContainerCheckBoxStyle" TargetType="CheckBox">
 			<Setter Property="Margin" Value="0 4 0 0" />
 		</Style>
+		<!--<Style TargetType="TextBlock">
+			<Setter Property="Foreground" Value="{DynamicResource WindowTextBrush}" />
+		</Style>-->
 	</UserControl.Resources>
 	<StackPanel
 		Margin="10"
